Up spring 4.x and modify some configures